<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mul">

    <TextView
        android:id="@+id/rand1"
        android:layout_width="108dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="108dp"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="none"
        android:text="@string/Number_1"

        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/rand2"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"

        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Number_2"
        android:textColor="@android:color/black"
        android:textSize="18sp"

        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/gen"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="8dp"
        android:keepScreenOn="true"
        android:text="@string/Generate"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="@+id/ans" />

    <TextView
        android:id="@+id/ans"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/answer"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="X"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/ans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

</androidx.constraintlayout.widget.ConstraintLayout>